<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".fragments.WelcomeFragment">


    <TextView
        android:id="@+id/tvWelcomeScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textSize="@dimen/sp_24"
        android:text="@string/welcome_to_navigation_component"
        android:textColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@mipmap/welcome_nav_comp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeScreen" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_64"
        android:layout_marginLeft="@dimen/dp_64"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/dp_64"
        android:layout_marginRight="@dimen/dp_64"
        android:background="@drawable/button_pressed"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWelcome" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_64"
        android:layout_marginLeft="@dimen/dp_64"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/dp_64"
        android:layout_marginRight="@dimen/dp_64"
        android:layout_marginBottom="@dimen/dp_64"
        android:background="@drawable/button_pressed"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>