<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:windowSoftInputMode="stateHidden"
    tools:context=".fragments.SignUpFragment">

    <TextView
        android:id="@+id/tvSignupScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/create_a_new_account"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/dp_32"
            android:layout_marginRight="@dimen/dp_32"
            android:padding="@dimen/dp_4"
            app:boxBackgroundColor="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/dp_32"
            android:layout_marginRight="@dimen/dp_32"
            android:padding="@dimen/dp_4"
            app:boxBackgroundColor="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/dp_32"
            android:layout_marginRight="@dimen/dp_32"
            android:padding="@dimen/dp_4"
            app:boxBackgroundColor="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textWebPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_64"
            android:layout_marginLeft="@dimen/dp_64"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/dp_64"
            android:layout_marginRight="@dimen/dp_64"
            android:layout_marginBottom="@dimen/dp_64"
            android:background="@drawable/button_pressed"
            android:clickable="true"
            android:elevation="@dimen/dp_4"
            android:focusable="true"
            android:text="@string/sign_up"
            android:imeOptions="actionDone"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:iconTint="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            tools:targetApi="lollipop"
            tools:ignore="TextViewEdits" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>